--- a/frontTRS/package.json
+++ b/frontTRS/package.json
@@ -2,7 +2,7 @@
   "name": "fronttrs",
   "version": "1.0.0",
   "description": "frontend for TREYESpassing project",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
